# small_games

./: .gitignore  README.md
ballcircle/: README.md  ball.py  border.py  colors.py  config.py  main.py  pyproject.toml  state.py  vector.py
conway_game_of_life/: README.md  main.py  pyproject.toml
spaceship/: README.md  constants.py  main.py  pyproject.toml
spaceship/background/: star.py
spaceship/entities/: asteroid.py  bullet.py  spaceship.py
spaceship/mixins/: drawable.py  falls.py  has_health.py
spaceship/utils/: colors.py  tools.py  vectors.py
